resolved slots overlapping

--- a/Client/rsr/src/App.css
+++ b/Client/rsr/src/App.css
@@ -175,6 +175,7 @@
   background-color: #000000;
   background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
   color: white;
+  margin-top:10%;
   margin-bottom: -20%;
 }
 
@@ -494,3 +495,26 @@ input[type=range]::-webkit-slider-thumb {
   width:10px;
   background-color: crimson;
 }
+
+
+
+.carousel_left{
+  position:absolute;
+  margin-left:-50%;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.carousel_right{
+  position:absolute;
+  margin-left:50%;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.carousel_left,.carousel_right :hover{
+  cursor: pointer;
+}
+
